Started changing autowired for inject Removed setting mute and ishome, replaced with 1 setting "isHomeMuted" Feature postnl added. 80% finished, need to wait for an actual delivery to finish implementation